Aggressively prevent scrolling on PC by applying overflow: hidden to html and body

--- a/style.css
+++ b/style.css
@@ -102,6 +102,7 @@ section:target {
 
 /* For PC */
 @media (min-width: 769px) {
+    html,
     body {
         overflow: hidden;
     }
